tests/valid/test_type_79.wyal
assert:
    forall(int[] xs, {int f}[] ys):
        if:
            xs == ys
        then:
            xs is (int[])&(bool[])
